# ee205_lab13a_animal_farm_3

./: Animal.cpp  Animal.h  CMakeLists.txt  Color.h  Gender.h  List.cpp  List.h  Mammal.cpp  Mammal.h  Node.cpp  Node.h  SinglyLinkedList.cpp  SinglyLinkedList.h  Weight.cpp  Weight.h  addCats.cpp  addCats.h  catClass.cpp  catClass.h  catDatabase.cpp  catDatabase.h  config.h  deleteCats.cpp  deleteCats.h  main.cpp  reportCats.cpp  reportCats.h
